Added Swagger Docs Api